# pgsql-mcp-server

./: .gitignore  LICENSE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  config.py  db_connection.py  env.example  mcp_server.py  pg_tools.py  pyproject.toml  test_connection.py
