[tool.poetry]
name = "pgsql-mcp-server"
version = "1.0.0"
description = "A generic, reusable PostgreSQL MCP server for AI agents"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asyncpg = "^0.30.0"
mcp = "^1.9.4"
pydantic = "^2.11.7"
pydantic-settings = "^2.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
