[tool.poetry]
name = "pgsql-mcp-server"
version = "1.0.0"
description = "A generic, reusable PostgreSQL MCP server for AI agents"
authors = ["Deb Adarsh <debadarsh7@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"  # Python 3.14 not yet supported by asyncpg/pydantic-core
asyncpg = "^0.30.0"
mcp = "^1.9.4"
pydantic = "^2.11.7"
pydantic-settings = "^2.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
